Fix overflowing line in project sidebar

--- a/src/app/project/view/project-view.component.scss
+++ b/src/app/project/view/project-view.component.scss
@@ -108,6 +108,5 @@
 }
 
 .divalign {
-margin-left: -15px;
 font-size: 12px;
 }
